# process_param_p

./: .gitignore  Cargo.toml  README.md
src/: chi2.rs  lib.rs  main.rs  norm.rs
test/: test_scenario.toml
