[package]
name = "process_param"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
libm = "0.2"
rand = "0.8"
toml = "0.7"
rayon = "1.6"
itertools = "0.10"
